🚀 대규모 코드 리팩토링 및 품질 개선 🔧 Lombok 도입으로 보일러플레이트 코드 대폭 감소: - @RequiredArgsConstructor로 생성자 주입 간소화 - @Data, @Builder 어노테이션으로 DTO/Entity 코드 정리 - @Slf4j로 로깅 코드 간소화 🏗️ 코드 구조 개선: - Builder 패턴 적용 (Restaurant 엔티티, DTO) - 정적 팩토리 메소드 도입 (RestaurantResponseDto.from()) - 비즈니스 로직 메소드 추가 (updateRestaurantInfo, isHighRated) 📊 예외 처리 체계화: - BusinessException 기반 계층적 예외 구조 도입 - ErrorCode enum으로 에러 코드 표준화 - ErrorResponse DTO로 구조화된 에러 응답 - 상세한 필드별 검증 오류 메시지 ⚡ 성능 및 로깅 강화: - 모든 Service 메소드에 상세 로깅 추가 - LocationUtils 유틸리티 클래스 추가 (거리 계산, 위치 검증) - Java 17 Stream API 최신 문법 적용 (.toList()) ✨ 새로운 기능 추가: - 고평점 맛집 조회 API (/api/restaurants/high-rated) - 프론트엔드 고평점 맛집 필터 버튼 - 위치 유효성 검증 강화 🎨 프론트엔드 개선: - JavaScript ES6+ 문법으로 현대화 - 공통 API request 메소드로 중복 코드 제거 - 고평점 맛집 필터 UI 추가 📝 코드 품질 향상: - 메소드 분리로 단일 책임 원칙 준수 - 의존성 주입 방식 표준화 - 일관된 예외 처리 패턴 Clean Architecture & Modern Java! 🎯 - 유지보수성 대폭 향상 - 확장성 있는 구조 - 모던 Java 패턴 적용